--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                             <label for="exampleEmailInput">Your Name</label>
                             <input class="u-full-width" id="exampleEmailInput"
                             name="_replyto" placeholder="John Smith"
-                            required >
+                               required type="text"> 
                         </div>
 
 
