--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/skeleton.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/custom2.css" rel="stylesheet">
 </head>
 
 <body>
