--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/skeleton.css" rel="stylesheet">
-    <link href="css/custom2.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 </head>
 
 <body>
@@ -83,18 +83,11 @@
 
     
 <section id="icon-layer">
-        <div class="twelve columns white">
+        <div class="twelve columns">
             <div class="icons-grouped"><img class="icons" id="downClick" src=
             "images/dream.png" alt="dream icon"> <img class="icons icon2" src=
             "images/develop.png" alt="develop icon"> <img class="icon-right" src=
             "images/deploy.png" alt="deploy icon"></div>
-        </div>
-    
-        <div class="twelve columns black">
-            <div class="icons-grouped"><img class="icons" id="downClick" src=
-            "images/dream_black.jpg" alt="dream icon"> <img class="icons icon2" src=
-            "images/develop_black.jpg" alt="develop icon"> <img class="icon-right" src=
-            "images/deploy_black.jpg" alt="deploy icon"></div>
         </div>
     </section>
 
