--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
 
     <title>Ryan Mugan</title>
-    <meta content="Ryan Mugan is an IT Professional with a focus on web design and development." name="description">
+    <meta content="Ryan Mugan is an IT Professional with a focus on web design and big data." name="description">
     <meta content="Ryan Mugan" name="author"><!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -133,7 +133,7 @@
                 Additionally, he has completed a number of volunteer web
                 projects for various organizations and clients throughout the
                 community. Ryan is actively pursuing a full time position upon
-                graduation (December 2015) in web development, data analytics,
+                graduation (December 2015) in web design & development, data analytics,
                 or a related field within IT.<br>
                 <br>
                 <a class="resume" href="images/RyanMugan_Resume.pdf" target=
