--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                                  <div class="six columns">
                             <label for="exampleEmailInput">Your Name</label>
                             <input class="u-full-width" id="exampleEmailInput"
-                            name="_replyto" placeholder="John Smith"
+                            name="name" placeholder="John Smith"
                             required type="text">
                         </div>
 
@@ -322,6 +322,7 @@
                         <div class="six columns">
                             <label for="exampleEmailInput">Your Email</label>
                             <input class="u-full-width" id="examplePhoneInput"
+                            name="_replyto"
                             placeholder="test@gmail.com" required type="email">
                         </div>
                     </div>
