--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <br>
 
 
-                <form action="http://formspree.io/muganrp@uwec.edu" method=
+                <form action="http://formspree.io/muganrp@gmail.com" method=
                 "post">
                     <div class="row">
                                  <div class="six columns">
