--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                    <li class="nav-item menu-item"><a class="sub-nav" href="#about"  data-toggle="collapse" data-target=".navbar-collapse" alt ="Ryan Mugan About">ABOUT</a></li>
 
-            <li class="nav-item menu-item"><a class="sub-nav" href="#portfolio"  data-toggle="collapse" data-target=".navbar-collapse" alt ="Ryan Mugan Portfolio">PORTFOLIO</a></li>
+
             <li class="nav-item menu-item"><a class="sub-nav" href="#contact"  data-toggle="collapse" data-target=".navbar-collapse" alt ="Ryan Mugan Contact">contact</a></li>
             <li><a class="font-awesome" target="_blank" href="https://www.linkedin.com/in/ryanmugan" alt ="Ryan Mugan Linkedin"><i class="fa fa-linkedin fa-lg"  data-toggle="collapse" data-target=".navbar-collapse"></i></a></li>
                 <li><a class="font-awesome" target="_blank" href="https://instagram.com/ryan_mugan/"  data-toggle="collapse" data-target=".navbar-collapse" alt ="Ryan Mugan Instagram"> <i class="fa fa-instagram fa-lg"></i></a></li>
@@ -127,8 +127,7 @@
                 <br>
             Ryan's professional work experience includes an assortment of technical
             positions at JAMF Software, 3M, UW - Eau Claire, and currently Liberty Mutual Insurance.
-            Ryan is currently working within Liberty’s Information Management department
-            to transform raw data into meaningful visualizations. Come July, he will be entering their Technical
+            Ryan is working within Liberty’s Technical
              Development Program with the goal of building business, technical, project management
              and leadership skills.<br>
                 <br>
@@ -144,154 +143,6 @@
             </div>
             <br>
 
-
-            <div class="twelve columns left">
-                <hr>
-
-
-                <h2 class="title" id="portfolio" style="visibility: hidden;">
-                portfolio</h2>
-
-
-                <h1 class="title">portfolio</h1>
-                <br>
-
-
-                <div class="max">
-                    <div class="row">
-
-                           <div class="six columns sites avalon">
-                            <a href=
-                            "http://marandasteinmetzrobey.com"
-                            target="_blank"><img class="img-responsive" src=
-                            "images/maranda.jpg" alt="Ryan Mugan - Maranda Steinmetz-Robey"></a>
-                        </div>
-
-                         <div class="six columns sites avalon">
-                            <a href="http://jigsup.org"
-                            target="_blank"><img class="img-responsive" src=
-                            "images/jigsup.jpg" alt="Ryan Mugan - Jigs Up"></a>
-                        </div>
-                    </div>
-                     <br>
-                    <br>
-                    <div class="row">
-                        <div class="six columns sites avalon">
-                            <a href="http://muganrp.github.io/Avaon/" target=
-                            "_blank"><img class="img-responsive" src=
-                            "images/avalon.jpg" alt="Ryan Mugan - Avalon Floral"></a>
-                        </div>
-
-
-                        <div class="six columns sites emilio">
-                            <a href="http://etaiveaho.com/" target=
-                            "_blank"><img class="img-responsive" src=
-                            "images/emilio.jpg" alt="Ryan Mugan - ETaiveaho"></a>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-
-
-                    <div class="row">
-                        <div class="six columns sites avalon">
-                            <a href="http://northernlakesregionalacademy.org/"
-                            target="_blank"><img class="img-responsive" src=
-                            "images/nlra.jpg" alt="Ryan Mugan - NLRA"></a>
-                        </div>
-
-
-                        <div class="six columns sites">
-                            <a href="http://uwecdancemarathon.org/" target=
-                            "_blank"><img class="img-responsive" src=
-                            "images/dance.jpg" alt="Ryan Mugan - Dance Marathon"></a>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-
-
-                </div>
-
-
-                <div class="break">
-
-                    <div class="row">
-
-                    <div class="six columns sites avalon">
-                            <a href=
-                            "http://marandasteinmetzrobey.com"
-                            target="_blank"><img class="img-responsive" src=
-                            "images/maranda.jpg" alt="Ryan Mugan - Maranda Steinmetz-Robey"></a>
-                        </div>
-
-
-                    </div>
-                         <br>
-                    <br>
-                            <div class="row">
-
-               <div class="six columns sites avalon">
-                            <a href=
-                            "jigsup.org"
-                            target="_blank"><img class="img-responsive" src=
-                            "images/jigsup.jpg" alt="Ryan Mugan - Jigs Up"></a>
-                        </div>
-
-
-                    </div>
-                      <br>
-                    <br>
-                    <div class="row">
-                        <div class="six columns sites avalon">
-                            <a href="http://muganrp.github.io/Avaon/" target=
-                            "_blank"><img class="img-responsive" src=
-                            "images/avalon.jpg" alt="RYan Mugan - Avalon Floral"></a>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-
-
-                    <div class="row">
-                        <div class="six columns sites emilio">
-                            <a href="http://etaiveaho.com/" target=
-                            "_blank"><img class="img-responsive" src=
-                            "images/emilio.jpg" alt="Ryan Mugan - Etaiveaho"></a>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-
-
-                    <div class="row">
-                        <div class="six columns sites avalon">
-                            <a href="http://northernlakesregionalacademy.org/"
-                            target="_blank"><img class="img-responsive" src=
-                            "images/nlra.jpg" alt="Ryan Mugan - NLRA"></a>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-
-
-                    <div class="row">
-                        <div class="six columns sites">
-                            <a href="http://uwecdancemarathon.org/" target=
-                            "_blank"><img class="img-responsive" src=
-                            "images/dance.jpg" alt="Ryan Mugan - Dane Marathon"></a>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-
-
-
-                </div>
-                <br>
-                <br>
-                <br>
-            </div>
 
 
             <div class="twelve columns left">
